added design elements in the graphic of hero banner

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -394,92 +394,119 @@
                 </defs>
               </svg>
 
-              <svg class="bottom-right"width="866" height="507" viewBox="0 0 866 507" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M865.5 51V28L840.5 21L166 432H234L865.5 51Z" fill="url(#paint0_linear)"/>
-<path d="M701.5 64.5L703.5 40L678.5 33.5L4 444.5H72L701.5 64.5Z" stroke="url(#paint1_linear)" stroke-width="2"/>
-<path d="M750.5 145L327 414.5H400L775.5 177V153.5L750.5 145Z" stroke="url(#paint2_linear)" stroke-width="2"/>
-<path d="M515 332L327 445H393.5L537 363V340.5L515 332Z" fill="url(#paint3_linear)"/>
-<path d="M838.5 129L695 216.5L691 245L717.5 252L860 163.5V136.5L838.5 129Z" fill="url(#paint4_linear)"/>
-<path d="M695 259L551 348V372.5L574 382L716.5 293.5V266.5L695 259Z" stroke="url(#paint5_linear)" stroke-width="2"/>
-<path d="M540 382L396 471V495.5L419 505L561.5 416.5V389.5L540 382Z" stroke="url(#paint6_linear)" stroke-width="2"/>
-<path d="M764.5 0.5L621 88V113L643.5 123.5L786 35V8L764.5 0.5Z" fill="url(#paint7_linear)"/>
+              <svg class="bottom-right"width="900" height="595" viewBox="0 0 900 595" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M824.5 50.5V27.5L799.5 20.5L125 431.5H193L824.5 50.5Z" fill="url(#paint0_linear)"/>
+<path d="M660.5 64L662.5 39.5L637.5 33L-37 444H31L660.5 64Z" stroke="url(#paint1_linear)" stroke-width="2"/>
+<path d="M709.5 144.5L286 414H359L734.5 176.5V153L709.5 144.5Z" stroke="url(#paint2_linear)" stroke-width="2"/>
+<path d="M474 331.5L342 415.5V440.5L362 448.5L496 362.5V340L474 331.5Z" fill="url(#paint3_linear)"/>
+<path d="M797.5 128.5L654 216L650 244.5L676.5 251.5L819 163V136L797.5 128.5Z" fill="url(#paint4_linear)"/>
+<path d="M654 258.5L510 347.5V372L533 381.5L675.5 293V266L654 258.5Z" stroke="url(#paint5_linear)" stroke-width="2"/>
+<path d="M794 239L650 328V352.5L673 362L815.5 273.5V246.5L794 239Z" fill="url(#paint6_linear)" stroke="url(#paint7_linear)" stroke-width="2"/>
+<path d="M499 381.5L355 470.5V495L378 504.5L520.5 416V389L499 381.5Z" stroke="url(#paint8_linear)" stroke-width="2"/>
+<path d="M723.5 0L580 87.5V112.5L602.5 123L745 34.5V7.5L723.5 0Z" fill="url(#paint9_linear)"/>
+<path d="M897.5 300L899.5 275.5L874.5 269L200 680H268L897.5 300Z" fill="url(#paint10_linear)" fill-opacity="0.38"/>
 <defs>
-<linearGradient id="paint0_linear" x1="523.75" y1="21" x2="523.75" y2="432" gradientUnits="userSpaceOnUse">
+<linearGradient id="paint0_linear" x1="482.75" y1="20.5" x2="482.75" y2="431.5" gradientUnits="userSpaceOnUse">
 <stop stop-color="#69C2BA"/>
 <stop offset="0.630208" stop-color="#30BEB0" stop-opacity="0"/>
 </linearGradient>
-<linearGradient id="paint1_linear" x1="353.75" y1="33.5" x2="353.75" y2="444.5" gradientUnits="userSpaceOnUse">
+<linearGradient id="paint1_linear" x1="312.75" y1="33" x2="312.75" y2="444" gradientUnits="userSpaceOnUse">
 <stop stop-color="#4D9A93"/>
 <stop offset="0.46875" stop-color="#69C2BA" stop-opacity="0"/>
 </linearGradient>
-<linearGradient id="paint2_linear" x1="551.25" y1="145" x2="551.25" y2="414.5" gradientUnits="userSpaceOnUse">
+<linearGradient id="paint2_linear" x1="510.25" y1="144.5" x2="510.25" y2="414" gradientUnits="userSpaceOnUse">
 <stop stop-color="#4D9A93"/>
 <stop offset="1" stop-color="#69C2BA" stop-opacity="0"/>
 </linearGradient>
-<linearGradient id="paint3_linear" x1="452.5" y1="332" x2="452.5" y2="445" gradientUnits="userSpaceOnUse">
+<linearGradient id="paint3_linear" x1="411.5" y1="331.5" x2="411.5" y2="444.5" gradientUnits="userSpaceOnUse">
 <stop stop-color="#69C2BA"/>
 <stop offset="1" stop-color="#3F9A92" stop-opacity="0"/>
 </linearGradient>
-<linearGradient id="paint4_linear" x1="777.5" y1="129" x2="777.5" y2="252" gradientUnits="userSpaceOnUse">
+<linearGradient id="paint4_linear" x1="736.5" y1="128.5" x2="736.5" y2="251.5" gradientUnits="userSpaceOnUse">
 <stop stop-color="#236361"/>
 <stop offset="0.807292" stop-color="#236361" stop-opacity="0"/>
 </linearGradient>
-<linearGradient id="paint5_linear" x1="634" y1="259" x2="634" y2="382" gradientUnits="userSpaceOnUse">
+<linearGradient id="paint5_linear" x1="593" y1="258.5" x2="593" y2="381.5" gradientUnits="userSpaceOnUse">
 <stop stop-color="#236361"/>
 <stop offset="1" stop-color="#236361"/>
 </linearGradient>
-<linearGradient id="paint6_linear" x1="479" y1="382" x2="479" y2="505" gradientUnits="userSpaceOnUse">
+<linearGradient id="paint6_linear" x1="732.75" y1="239" x2="732.75" y2="362" gradientUnits="userSpaceOnUse">
+<stop stop-color="#236361"/>
+<stop offset="0.770833" stop-color="#236361" stop-opacity="0"/>
+</linearGradient>
+<linearGradient id="paint7_linear" x1="733" y1="239" x2="733" y2="362" gradientUnits="userSpaceOnUse">
 <stop stop-color="#236361"/>
 <stop offset="1" stop-color="#236361"/>
 </linearGradient>
-<linearGradient id="paint7_linear" x1="703.5" y1="0.5" x2="703.5" y2="123.5" gradientUnits="userSpaceOnUse">
+<linearGradient id="paint8_linear" x1="438" y1="381.5" x2="438" y2="504.5" gradientUnits="userSpaceOnUse">
+<stop stop-color="#236361"/>
+<stop offset="1" stop-color="#236361"/>
+</linearGradient>
+<linearGradient id="paint9_linear" x1="662.5" y1="0" x2="662.5" y2="123" gradientUnits="userSpaceOnUse">
 <stop stop-color="#236361"/>
 <stop offset="0.807292" stop-color="#236361" stop-opacity="0"/>
+</linearGradient>
+<linearGradient id="paint10_linear" x1="549.75" y1="269" x2="549.75" y2="680" gradientUnits="userSpaceOnUse">
+<stop stop-color="#69C2BA" stop-opacity="0.9"/>
+<stop offset="0.375" stop-color="#69C2BA" stop-opacity="0.07"/>
 </linearGradient>
 </defs>
 </svg>
-
-              <svg class="top-right" width="866" height="507" viewBox="0 0 866 507" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M865.5 51V28L840.5 21L166 432H234L865.5 51Z" fill="url(#paint0_linear)"/>
-<path d="M701.5 64.5L703.5 40L678.5 33.5L4 444.5H72L701.5 64.5Z" stroke="url(#paint1_linear)" stroke-width="2"/>
-<path d="M750.5 145L327 414.5H400L775.5 177V153.5L750.5 145Z" stroke="url(#paint2_linear)" stroke-width="2"/>
-<path d="M515 332L383 416V441L403 449L537 363V340.5L515 332Z" fill="url(#paint3_linear)"/>
-<path d="M838.5 129L695 216.5L691 245L717.5 252L860 163.5V136.5L838.5 129Z" fill="url(#paint4_linear)"/>
-<path d="M695 259L551 348V372.5L574 382L716.5 293.5V266.5L695 259Z" stroke="url(#paint5_linear)" stroke-width="2"/>
-<path d="M540 382L396 471V495.5L419 505L561.5 416.5V389.5L540 382Z" stroke="url(#paint6_linear)" stroke-width="2"/>
-<path d="M764.5 0.5L621 88V113L643.5 123.5L786 35V8L764.5 0.5Z" fill="url(#paint7_linear)"/>
+<svg class="top-right"width="900" height="595" viewBox="0 0 900 595" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M824.5 50.5V27.5L799.5 20.5L125 431.5H193L824.5 50.5Z" fill="url(#paint0_linear)"/>
+<path d="M660.5 64L662.5 39.5L637.5 33L-37 444H31L660.5 64Z" stroke="url(#paint1_linear)" stroke-width="2"/>
+<path d="M709.5 144.5L286 414H359L734.5 176.5V153L709.5 144.5Z" stroke="url(#paint2_linear)" stroke-width="2"/>
+<path d="M474 331.5L342 415.5V440.5L362 448.5L496 362.5V340L474 331.5Z" fill="url(#paint3_linear)"/>
+<path d="M797.5 128.5L654 216L650 244.5L676.5 251.5L819 163V136L797.5 128.5Z" fill="url(#paint4_linear)"/>
+<path d="M654 258.5L510 347.5V372L533 381.5L675.5 293V266L654 258.5Z" stroke="url(#paint5_linear)" stroke-width="2"/>
+<path d="M794 239L650 328V352.5L673 362L815.5 273.5V246.5L794 239Z" fill="url(#paint6_linear)" stroke="url(#paint7_linear)" stroke-width="2"/>
+<path d="M499 381.5L355 470.5V495L378 504.5L520.5 416V389L499 381.5Z" stroke="url(#paint8_linear)" stroke-width="2"/>
+<path d="M723.5 0L580 87.5V112.5L602.5 123L745 34.5V7.5L723.5 0Z" fill="url(#paint9_linear)"/>
+<path d="M897.5 300L899.5 275.5L874.5 269L200 680H268L897.5 300Z" fill="url(#paint10_linear)" fill-opacity="0.38"/>
 <defs>
-<linearGradient id="paint0_linear" x1="523.75" y1="21" x2="523.75" y2="432" gradientUnits="userSpaceOnUse">
+<linearGradient id="paint0_linear" x1="482.75" y1="20.5" x2="482.75" y2="431.5" gradientUnits="userSpaceOnUse">
 <stop stop-color="#69C2BA"/>
 <stop offset="0.630208" stop-color="#30BEB0" stop-opacity="0"/>
 </linearGradient>
-<linearGradient id="paint1_linear" x1="353.75" y1="33.5" x2="353.75" y2="444.5" gradientUnits="userSpaceOnUse">
+<linearGradient id="paint1_linear" x1="312.75" y1="33" x2="312.75" y2="444" gradientUnits="userSpaceOnUse">
 <stop stop-color="#4D9A93"/>
 <stop offset="0.46875" stop-color="#69C2BA" stop-opacity="0"/>
 </linearGradient>
-<linearGradient id="paint2_linear" x1="551.25" y1="145" x2="551.25" y2="414.5" gradientUnits="userSpaceOnUse">
+<linearGradient id="paint2_linear" x1="510.25" y1="144.5" x2="510.25" y2="414" gradientUnits="userSpaceOnUse">
 <stop stop-color="#4D9A93"/>
 <stop offset="1" stop-color="#69C2BA" stop-opacity="0"/>
 </linearGradient>
-<linearGradient id="paint3_linear" x1="452.5" y1="332" x2="452.5" y2="445" gradientUnits="userSpaceOnUse">
+<linearGradient id="paint3_linear" x1="411.5" y1="331.5" x2="411.5" y2="444.5" gradientUnits="userSpaceOnUse">
 <stop stop-color="#69C2BA"/>
 <stop offset="1" stop-color="#3F9A92" stop-opacity="0"/>
 </linearGradient>
-<linearGradient id="paint4_linear" x1="777.5" y1="129" x2="777.5" y2="252" gradientUnits="userSpaceOnUse">
+<linearGradient id="paint4_linear" x1="736.5" y1="128.5" x2="736.5" y2="251.5" gradientUnits="userSpaceOnUse">
 <stop stop-color="#236361"/>
 <stop offset="0.807292" stop-color="#236361" stop-opacity="0"/>
 </linearGradient>
-<linearGradient id="paint5_linear" x1="634" y1="259" x2="634" y2="382" gradientUnits="userSpaceOnUse">
+<linearGradient id="paint5_linear" x1="593" y1="258.5" x2="593" y2="381.5" gradientUnits="userSpaceOnUse">
 <stop stop-color="#236361"/>
 <stop offset="1" stop-color="#236361"/>
 </linearGradient>
-<linearGradient id="paint6_linear" x1="479" y1="382" x2="479" y2="505" gradientUnits="userSpaceOnUse">
+<linearGradient id="paint6_linear" x1="732.75" y1="239" x2="732.75" y2="362" gradientUnits="userSpaceOnUse">
+<stop stop-color="#236361"/>
+<stop offset="0.770833" stop-color="#236361" stop-opacity="0"/>
+</linearGradient>
+<linearGradient id="paint7_linear" x1="733" y1="239" x2="733" y2="362" gradientUnits="userSpaceOnUse">
 <stop stop-color="#236361"/>
 <stop offset="1" stop-color="#236361"/>
 </linearGradient>
-<linearGradient id="paint7_linear" x1="703.5" y1="0.5" x2="703.5" y2="123.5" gradientUnits="userSpaceOnUse">
+<linearGradient id="paint8_linear" x1="438" y1="381.5" x2="438" y2="504.5" gradientUnits="userSpaceOnUse">
+<stop stop-color="#236361"/>
+<stop offset="1" stop-color="#236361"/>
+</linearGradient>
+<linearGradient id="paint9_linear" x1="662.5" y1="0" x2="662.5" y2="123" gradientUnits="userSpaceOnUse">
 <stop stop-color="#236361"/>
 <stop offset="0.807292" stop-color="#236361" stop-opacity="0"/>
+</linearGradient>
+<linearGradient id="paint10_linear" x1="549.75" y1="269" x2="549.75" y2="680" gradientUnits="userSpaceOnUse">
+<stop stop-color="#69C2BA" stop-opacity="0.9"/>
+<stop offset="0.375" stop-color="#69C2BA" stop-opacity="0.07"/>
 </linearGradient>
 </defs>
 </svg>
