--- a/public/css/herostyles.css
+++ b/public/css/herostyles.css
@@ -375,6 +375,80 @@
   justify-content: space-around;
   align-items: center;
 }
+@media(max-width:1024px) and (min-width:849px) {
+  .hero{
+    height: 900px !important;
+  }
+  .hero__content__details{
+    transform: scale(1.3)
+  }
+  .bottom-right{
+    position: absolute;
+    bottom: 0;
+    left: -40vw;
+  }
+  .top-right{
+    right: -20vw !important;
+  }
+}
+@media(max-width:850px) and (min-width:600px){
+  .hero{
+    height: 950px !important;
+  }
+  .hero__content__details{
+    transform: scale(1.3)
+  }
+  .top-right{
+    right: 50vw !important;
+    top: 110vh !important;
+  }
+  .bottom-right{
+    bottom: -80vh !important;
+    right: 0 !important;
+  }
+  .bottom-center{
+    bottom: -65vh !important;
+  }
+}
+@media(max-width:600px) and (min-width:425px){
+  .hero{
+    height: 850px !important;
+  }
+  .hero__content__details{
+    transform: scale(1);
+  }
+  .top-right{
+    right: 20vw !important;
+    top: 90vh !important;
+  }
+  .bottom-right{
+    bottom: -80vh !important;
+    right: -43vw !important;
+  }
+  .bottom-center{
+    bottom: -65vh !important;
+  }
+}
+@media(max-width:425px){
+  .hero{
+    height: 850px !important;
+  }
+  .chat{
+    width: 320px !important;
+    height: 225px !important;
+  }
+  .top-right{
+    right: 5vw !important;
+    top: 90vh !important;
+  }
+  .bottom-right{
+    bottom: -90vh !important;
+    right: -60vw !important;
+  }
+  .bottom-center{
+    bottom: -65vh !important;
+  }
+}
 @media (max-width: 1024px) {
   .hero {
     background-size: 1500px;
