--- a/public/css/herostyles.css
+++ b/public/css/herostyles.css
@@ -143,7 +143,6 @@
   font-family: lato, sans-serif;
   border-radius: 15px;
   color: black;
-  background: #00172C;
   border-bottom: 1px solid #c1002c;
   box-shadow: 0 5px 3px -2px #c1002c;
   width: 400px;
@@ -156,6 +155,7 @@
   z-index: 2;
   margin-top: 50px;
   display: flex;
+  background: radial-gradient(ellipse at bottom, #030119 0%, #00172c 100%);
   /* display: none; */
 }
 .hero__content .chat__header {
@@ -376,95 +376,95 @@
   justify-content: space-around;
   align-items: center;
 }
-@media(min-width:1440px){
-  .hero__content__details{
+@media (min-width: 1440px) {
+  .hero__content__details {
     transform: scale(1.2);
   }
-  .chat{
+  .chat {
     transform: scale(1.3);
     position: relative;
     top: 10vh !important;
     right: -5vw !important;
   }
 }
-@media(max-width: 1440px) and (min-width: 1024px){
-  .chat{
+@media (max-width: 1440px) and (min-width: 1024px) {
+  .chat {
     position: relative;
     top: 7vh !important;
     right: -5vw !important;
   }
 }
-@media(max-width:1024px) and (min-width:849px) {
-  .hero{
+@media (max-width: 1024px) and (min-width: 849px) {
+  .hero {
     height: 900px !important;
   }
-  .hero__content__details{
-    transform: scale(1.3)
+  .hero__content__details {
+    transform: scale(1.3);
   }
-  .bottom-right{
+  .bottom-right {
     position: absolute;
     bottom: 0;
     left: -40vw;
   }
-  .top-right{
+  .top-right {
     right: -20vw !important;
   }
 }
-@media(max-width:850px) and (min-width:600px){
-  .hero{
+@media (max-width: 850px) and (min-width: 600px) {
+  .hero {
     height: 950px !important;
   }
-  .hero__content__details{
-    transform: scale(1.3)
+  .hero__content__details {
+    transform: scale(1.3);
   }
-  .top-right{
+  .top-right {
     right: 50vw !important;
     top: 110vh !important;
   }
-  .bottom-right{
+  .bottom-right {
     bottom: -80vh !important;
     right: 0 !important;
   }
-  .bottom-center{
+  .bottom-center {
     bottom: -65vh !important;
   }
 }
-@media(max-width:600px) and (min-width:425px){
-  .hero{
+@media (max-width: 600px) and (min-width: 425px) {
+  .hero {
     height: 850px !important;
   }
-  .hero__content__details{
+  .hero__content__details {
     transform: scale(1);
   }
-  .top-right{
+  .top-right {
     right: 20vw !important;
     top: 90vh !important;
   }
-  .bottom-right{
+  .bottom-right {
     bottom: -80vh !important;
     right: -43vw !important;
   }
-  .bottom-center{
+  .bottom-center {
     bottom: -65vh !important;
   }
 }
-@media(max-width:425px){
-  .hero{
+@media (max-width: 425px) {
+  .hero {
     height: 850px !important;
   }
-  .chat{
+  .chat {
     width: 320px !important;
     height: 225px !important;
   }
-  .top-right{
+  .top-right {
     right: 5vw !important;
     top: 90vh !important;
   }
-  .bottom-right{
+  .bottom-right {
     bottom: -90vh !important;
     right: -60vw !important;
   }
-  .bottom-center{
+  .bottom-center {
     bottom: -65vh !important;
   }
 }
