--- a/public/css/herostyles.css
+++ b/public/css/herostyles.css
@@ -49,6 +49,7 @@
 }
 .registration__details input[type="email"]{
   color: rgb(31, 31, 31);
+  font-weight: 500;
   width: 250px;
   margin-right: 10px;
 }
@@ -401,17 +402,80 @@
   .chat{
     transform: scale(1.3);
     position: relative;
-    top: 10vh !important;
+    top: 7vh !important;
     right: -5vw !important;
   }
+  .bottom-center{
+    transform: scale(0.8) !important;
+    position: absolute;
+    bottom: -50vh;
+    left: 20vw !important;
+  }
+  .bottom-right{
+    transform: scale(0.8) !important;
+    position: absolute;
+    bottom: -60vh !important;
+    right: -10vw !important;
+  }
+  .top-right{
+    transform: scale(0.8) !important;
+    position: absolute;
+    top: 0vh !important;
+    right: -10vw;
+  }
 }
-@media(max-width: 1440px) and (min-width: 1024px){
+@media(max-width: 1440px) and (min-width: 1300px){
+  .chat{
+    transform: scale(1.1);
+    position: relative;
+    top: 5vh !important;
+    right: -5vw !important;
+  }
+  .bottom-center{
+    transform: scale(0.7) !important;
+    position: absolute;
+    bottom: -40vh !important;
+    left: 14vw !important;
+  }
+  .bottom-right{
+    transform: scale(0.7) !important;
+    position: absolute;
+    bottom: -50vh !important;
+    right: -13vw !important;
+  }
+  .top-right{
+    transform: scale(0.7) !important;
+    position: absolute;
+    top: -5vh !important;
+    right: -10vw;
+  }
+}
+@media(max-width: 1300px) and (min-width: 1024px){
   .chat{
     position: relative;
-    top: 0vh !important;
+    top: 5vh !important;
     right: -5vw !important;
   }
 }
+
+@media(max-width:850px) and (min-height: 950px){
+  .bottom-center{
+    transform: scale(0.6);
+    position: absolute;
+    top: 60vh !important;
+    left: -55vw !important;
+  }
+  .bottom-right{
+    transform: scale(0.6);
+    position: absolute;
+    top: 59vh !important;
+    left: 5vw !important;
+  }
+  .top-right{
+    display: none !important;
+  }
+}
+
 @media(max-width:1024px) and (min-width:849px) {
   .hero{
     height: 900px !important;
@@ -426,6 +490,9 @@
   }
   .top-right{
     right: -20vw !important;
+  }
+  .hero__content__banner_slogan{
+    margin-left: 0 !important;
   }
 }
 @media(max-width:850px) and (min-width:600px){
@@ -446,6 +513,9 @@
   .bottom-center{
     bottom: -65vh !important;
   }
+  .hero__content__banner_slogan{
+    margin-left: 0 !important;
+  }
 }
 @media(max-width:600px) and (min-width:425px){
   .hero{
@@ -465,6 +535,16 @@
   .bottom-center{
     bottom: -65vh !important;
   }
+  .registration__details>*{
+    margin-top: 15px;
+  }
+  .registration__details input[type="submit"]{
+    margin-left: -10px !important;
+    width: 250px;
+  }
+  .hero__content__banner_slogan{
+    margin-left: 0 !important;
+  }
 }
 @media(max-width:425px){
   .hero{
@@ -476,14 +556,24 @@
   }
   .top-right{
     right: 5vw !important;
-    top: 90vh !important;
+    top: 70vh !important;
   }
   .bottom-right{
-    bottom: -90vh !important;
+    bottom: -60vh !important;
     right: -60vw !important;
   }
   .bottom-center{
-    bottom: -65vh !important;
+    bottom: -15vh !important;
+  }
+  .registration__details>*{
+    margin-top: 15px;
+  }
+  .registration__details input[type="submit"]{
+    margin-left: -10px !important;
+    width: 250px;
+  }
+  .hero__content__banner_slogan{
+    margin-left: 0 !important;
   }
 }
 @media (max-width: 1024px) {
