--- a/views/home.hbs
+++ b/views/home.hbs
@@ -150,34 +150,30 @@
               </div>
               
                <div class="hero__content__banner_slogan">
-              <div class="animated delay-5s fadeOut">
-                <span class="fadeIn animated delay-1s">
-                  Register
-                </span>
-                <span class="fadeIn animated delay-2s">
-                  Compete
-                </span>
-                <span class="fadeIn animated delay-3s">
-                  Win
-                </span>
-                <span class="fadeIn animated delay-4s">
-                  Brag
-                </span>
-              </div>
-              <div class="save_the_date zoomIn animated delay-5s">
-                Coming Soon!
-              </div>
-              {{!-- <div class="last-date-info animated bounceInUp delay-5s">
-                Last date of registration is 9th Jan
-                <div>
-                  hurry up folks!
+                <div class="animated delay-5s fadeOut">
+                  <span class="fadeIn animated delay-1s">
+                    Register
+                  </span>
+                  <span class="fadeIn animated delay-2s">
+                    Compete
+                  </span>
+                  <span class="fadeIn animated delay-3s">
+                    Win
+                  </span>
+                  <span class="fadeIn animated delay-4s">
+                    Brag
+                  </span>
                 </div>
-              </div> --}}
-            </div>
-            <div class="registration__details fadeIn animated delay-5s" style="margin-top: 30px;">
+                <div class="save_the_date zoomIn animated delay-5s">
+                  Coming Soon!
+                </div>
+              </div>
+            <form action="/api/email" method="POST">
+              <div class="registration__details fadeIn animated delay-5s" style="margin-top: 30px;">
                 <input type="email" name="email" id="user-email" placeholder="Enter your email" >
                 <input type="submit" id="notify-btn" value="Notify Me">
               </div>
+            </form>
             </div>
             <div class="hero__content__banner">
               <div class="chat">
