--- a/public/css/style.css
+++ b/public/css/style.css
@@ -272,16 +272,14 @@ div#swal2-content ol li {
 #header.fixed-navbar .main-nav li a:hover {
   color: #bd0c0e;
 }
-.navbar-toggle {
-  display: none;
-  height: 50px;
-  width: 50px;
-  text-align: center;
-  line-height: 50px;
-  margin: 15px;
-  padding: 0;
-  font-size: 32px;
-  color: white;
+.navbar-toggle .menu-icon{
+  position: absolute;
+  right: 2.5vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: white;
+  transform: scale(1.5);
 }
 #header.transparent-navbar .navbar-toggle {
   color: #fff;
