--- a/views/coc.hbs
+++ b/views/coc.hbs
@@ -4,16 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link
+      href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:800i|Amaranth:700i|Kanit:700i|Lato:900i|Lato|Source+Sans+Pro:900i"
+      rel="stylesheet"
+    />
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" type="image/png" href="/img/logo_only1.png" />
-  <link rel="stylesheet" href="css/style.css">
+  
   <title>Code of Conduct</title>
+  <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/herostyles.css" />
 </head>
 <style>
+    
   body {
     background-color: #fff;
   }
+  img {
+    vertical-align: middle;
+}
   .heading {
     color: #bd0c0e;
     font-size: 50px;
@@ -33,14 +43,15 @@
   .col {
     flex: 1 0;
   }
-  .logofix {
-    width: 200px;
-  }
+
   .img-container {
+      margin-top: 50px;
     text-align: center;
+    margin-bottom: 50px;
   }
   .content {
-    flex: 3
+    flex: 3;
+    margin-bottom: 50px;
   }
   @media all and (max-width:768px) {
     .heading {
@@ -53,11 +64,37 @@
       margin-bottom: 10px;
     }
   }
+    
+.footer-brand span:first-of-type {
+    color: #b1151a;
+}
+    
+.footer-brand span {
+    font-weight: 900;
+    font-family: lato;
+    font-style: italic;
+    text-transform: uppercase;
+    font-size: 3rem;
+    color: #ddd;
+    vertical-align: middle;
+}
+
 </style>
 
 <body>
   <nav>
-    <div class="img-container"><a href="/"><img class="logo-img logofix" src="./img/image.png" alt="logo"></a></div>
+    <div class="img-container">
+        <div class="footer-brand">
+            <a class="logo" href="/">
+                <img
+                class="logo-img"
+                src="./img/2022/navbar_logo.png"
+                alt="logo"
+                />
+            </a>
+            <span>Dot</span><span>Slash</span>
+        </div>
+    </div>
   </nav>
   <h1 class="heading">Code of Conduct</h1>
   <div class="wrapper">
