--- a/views/home.hbs
+++ b/views/home.hbs
@@ -250,18 +250,26 @@
             <!-- /section title -->
 
             <div class="college" style="text-align:center; margin-top:-20px;">
-
+              <img
+                src="./img/svnit.png"
+                alt="logo"
+                style="height:120px;width:120px;border-radius:50%;"
+              />
               <img
                 src="./img/ashine.png"
                 alt="logo"
                 style="height:120px;width:120px;border-radius:50%;"
               />
               <img
-                src="./img/svnit.png"
+                src="./img/ssip_logo.png"
+                alt="logo"
+                height="68px"
+              />
+              <img
+                src="./img/acm_logo.png"
                 alt="logo"
                 style="height:120px;width:120px;border-radius:50%;"
-              />
-
+              />   
             </div><br /><br />
 
             <div class="col-md-8 col-md-offset-2 text-center">
