--- a/views/home.hbs
+++ b/views/home.hbs
@@ -655,13 +655,14 @@
               </h3>
             </div>
             <div id="workshops">
+
               <div class="workshop-card">
                 <div class="workshop-title">
-                <h1>Beginner's guide to hackathon</h1>
-                <div class="event-dates">
-                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
-                  <span>24/12/2021 &nbsp; 6:00 PM IST</span>
-                </div>
+                  <h1>Beginner's guide to hackathon</h1>
+                  <div class="event-dates">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
+                    <span>24/12/2021 &nbsp; 6:00 PM IST</span>
+                  </div>
                 </div>
                 <div class="workshop-speaker">
                   <img src="img/2022/new_logo.png" style="border: none; height: auto; width:60px"  alt="">
@@ -670,7 +671,7 @@
                     <h4>Organising Team</h4>
                   </div>
                 </div>
-                <button class="session-link">
+                <button class="session-link" onClick="javascript:window.open('https://meet.google.com/xsz-kqbu-qzr', '_blank');">
                   <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
                   Session Link
                 </button>
@@ -928,7 +929,7 @@
               <a href="https://filecoin.io" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/filecoin.png" alt="">
               </a>
-              <a href="https://symbl.ai/" target="_blank" class="sponsor" rel="noopener noreferrer">
+              <a href="https://symbl.ai/?utm_source=hackathons&utm_medium=hack-dot-slash&utm_campaign=hack-dot-slash" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/symblAI.png" alt="">
               </a>
               <a href="https://alan.app/?utm_source=Hackathon&utm_medium=hackdotslash" target="_blank" class="sponsor" rel="noopener noreferrer">
