--- a/views/home.hbs
+++ b/views/home.hbs
@@ -671,7 +671,7 @@
                     <h4>Organising Team</h4>
                   </div>
                 </div>
-                <button class="session-link" onClick="javascript:window.open('https://meet.google.com/xsz-kqbu-qzr', '_blank');">
+                <button class="session-link">
                   <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
                   Session Link
                 </button>
@@ -694,7 +694,7 @@
                       </div>
                   </div>
                 </a>
-                <button class="session-link">
+                <button class="session-link" onClick="javascript:window.open('https://youtu.be/tTdJ50LQi2U', '_blank');">
                   <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
                   Session Link
                 </button>
