--- a/views/alumni.hbs
+++ b/views/alumni.hbs
@@ -105,7 +105,8 @@
                 {{!-- <li><a href="/#about">About</a></li> --}}
                 <li><a href="/prizes">Prizes</a></li>
                 <li><a href="/#schedule">Schedule</a></li>
-				<li><a href="/#workshops">Sessions</a></li>
+				<li><a href="/#sessions">Sessions</a></li>
+				 <li><a href="/#mentors">Mentors</a></li>
                 <li><a href="/#sponsors">Sponsors</a></li>
                 <li><a href="/#faq">FAQs</a></li>
                 {{!-- <li><a href="/#contact">Contact</a></li> --}}
