--- a/views/home.hbs
+++ b/views/home.hbs
@@ -906,7 +906,7 @@
             <div id="workshop-speakers">
               <a href="https://www.linkedin.com/in/naitik-dodia-60b496147/">
                 <div class="speaker-card">
-                  <img src="img/mentors/naitik.png" alt="">
+                  <img src="img/mentors/naitik.PNG" alt="">
                   <h1 class="speaker-title">Naitik Dodia</h1>
                   <h3 class="speaker-designation">Machine Learning Engineer<br>Amazon</h3>
                 </div>
@@ -914,7 +914,7 @@
 
               <a href="https://www.linkedin.com/in/anushbhatia/">
                 <div class="speaker-card">
-                  <img src="img/mentors/anush.png" alt="">
+                  <img src="img/mentors/anush.PNG" alt="">
                   <h1 class="speaker-title">Anush Bhatia</h1>
                   <h3 class="speaker-designation">Senior Software Engineer<br>Capgemini</h3>
                 </div>
@@ -922,7 +922,7 @@
 
               <a href="https://www.linkedin.com/in/vanshikagarg17/">
                 <div class="speaker-card">
-                  <img src="img/mentors/vanshika.png" alt="">
+                  <img src="img/mentors/vanshika.PNG" alt="">
                   <h1 class="speaker-title">Vanshika Garg </h1>
                   <h3 class="speaker-designation">Data Scientist <br>Fractal Analytics </h3>
                 </div>
@@ -930,7 +930,7 @@
 
               <a href="https://www.linkedin.com/in/dhruvam-zaveri">
                 <div class="speaker-card">
-                  <img src="img/mentors/dhruvam.png" alt="">
+                  <img src="img/mentors/dhruvam.PNG" alt="">
                   <h1 class="speaker-title">Dhruvam Zaveri</h1>
                   <h3 class="speaker-designation">SDE Intern<br>Motorola Solutions, India</h3>
                 </div>
@@ -938,7 +938,7 @@
 
               <a href="https://www.linkedin.com/in/ksatyarth2/">
                 <div class="speaker-card">
-                  <img src="img/mentors/kumar.png" alt="">
+                  <img src="img/mentors/kumar.PNG" alt="">
                   <h1 class="speaker-title">Kumar Satyarth</h1>
                   <h3 class="speaker-designation">Smart Contract Developer<br>Timeswap Labs</h3>
                 </div>
@@ -962,7 +962,7 @@
 
               <a href="https://www.linkedin.com/in/ashutosh1919">
                 <div class="speaker-card">
-                  <img src="img/mentors/Ashutosh.png" alt="">
+                  <img src="img/mentors/Ashutosh.PNG" alt="">
                   <h1 class="speaker-title">Ashutosh Husainali Hathidara</h1>
                   <h3 class="speaker-designation">Student<br>Indiana University Bloomington</h3>
                 </div>
